--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,29 @@
 {
-    "name": "melkov/yii2-tools",
-    "description": "Some components and helpers for yii2 framework",
-    "authors": [
-        {
-            "name": "AntonSmorodin",
-            "email": "anton@smorodin.me"
-        }
-    ],
-    "require": {}
+  "name": "melkov/yii2-tools",
+  "description": "Some components and helpers for yii2 framework",
+  "authors": [
+    {
+      "name": "AntonSmorodin",
+      "email": "anton@smorodin.me"
+    }
+  ],
+  "type": "yii2-extension",
+  "keywords": [
+    "yii2",
+    "extension"
+  ],
+  "license": "MIT",
+  "require": {
+    "yiisoft/yii2": "~2.0",
+    "yiisoft/yii2-jui": "^2.0.0",
+    "yiisoft/yii2-imagine": "*",
+    "kartik-v/yii2-widget-typeahead": "*",
+    "schmunk42/yii2-giiant": "*",
+    "kartik-v/yii2-widget-datetimepicker": "*"
+  },
+  "autoload": {
+    "psr-4": {
+      "melkov\\components\\": ""
+    }
+  }
 }
