--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,8 @@
     "psr-4": {
       "melkov\\components\\": ""
     }
+  },
+  "extra": {
+    "bootstrap": "melkov\\components\\Bootstrap"
   }
 }
